# api/openapi/oas_request_encoders_gen.go
@@ -136,6 +136,20 @@ func encodeRefreshSourcesRequest(
 	return nil
 }
 
+func encodeResolveWorkspaceBindingRequest(
+	req *ResolveWorkspaceBinding,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
+
 func encodeRestoreWorkspaceRequest(
 	req *RestoreWorkspaceReq,
 	r *http.Request,
